# Road-Centerline

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Notebooks/: centerline.ipynb
src/road_centerline/: __init__.py  cli.py  core.py  crs.py  densify.py  exceptions.py
tests/: conftest.py  test_cli.py  test_core.py  test_crs.py  test_densify.py
